<resources>
    <string name="app_name">Cockt\'eirb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_text_1">Recherche</string>
    <string name="tab_text_2">Catégories</string>
    <string name="tab_text_3">Ingredients</string>
    <string name="pop_up_cocktail_name">Smashed Watermelon\nMargarita</string>
    <string name="pop_up_cocktail_category">Cocktail</string>
    <string name="pop_up_cocktail_served_in">Instructions</string>
    <string name="pop_up_cocktail_instructions">In a mason jar muddle the watermelon\nand 5 mint leaves together into a\npuree and strain. Next add the\ngrapefruit juice, juice of half a lime\nand the tequila as well as some ice.\nPut a lid on the jar and shake. Pour\ninto a glass and add more ice. Garnish\nwith fresh mint and a small slice of\nwatermelon</string>
    <string name="pop_up_cocktail_ingredients">- Watermelon (1/2 cup)\n- Mint (5)\n- Grapefruit Juice (1/3 cup)\n- Lime (Juice of 1/2)\n- Tequila (1 shot)\n- Watermelon (Garnish with)\n- Mint (Garnish with</string>
</resources>