<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ctrlActivityIndicator"
        android:indeterminateOnly="true"
        android:keepScreenOn="true"
        android:layout_centerInParent="true"
        android:visibility="gone"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ctrlMainLayout"
        android:visibility="visible"
    >

    <!-- Image -->
    <ImageView
        android:id="@+id/imageViewCocktail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:layout_centerHorizontal="true"/>

    <!-- TextViews -->
    <TextView
        android:id="@+id/pop_up_cocktail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewCocktail"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pop_up_cocktail_name" />

    <TextView
        android:id="@+id/pop_up_cocktail_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_up_cocktail_name"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pop_up_cocktail_category" />

    <TextView
        android:id="@+id/pop_up_cocktail_served_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_up_cocktail_category"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pop_up_cocktail_served_in" />

    <TextView
        android:id="@+id/pop_up_cocktail_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_up_cocktail_served_in"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pop_up_cocktail_instructions" />

    <TextView
        android:id="@+id/pop_up_cocktail_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_up_cocktail_instructions"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pop_up_cocktail_ingredients" />

    </RelativeLayout>
</RelativeLayout>
